# django-master

carros/: docker-compose.yml  pyproject.toml  requirements.txt
carros/cars/: admin.py  forms.py  models.py  urls.py  views.py
carros/cars/migrations/: 0001_initial.py  0002_brand_alter_car_brand.py  0003_car_photo_car_plate.py
carros/cars/static/css/: cars.css
carros/cars/templates/cars/: cars.html  new_car.html
carros/contrib/: env-sample
carros/core/: settings.py  urls.py
carros/static/css/: base.css
carros/templates/: base.html
carros/users/: forms.py  models.py  urls.py  views.py
carros/users/migrations/: 0001_initial.py
carros/users/templates/users/: register.html
